--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<div class="about-wrapper">
 					<div id="about-me"class="about-me">
 						<h4>More about me</h4>
-						<p>Driven computer science graduate with a keen interest in full-stack web development.</p>
+						<p>Driven computer science undergraduate with a keen interest in full-stack web development.</p>
 						<p>
 						I am currently pursuing my <strong>Bachelor's degree in Computer Science</strong> stream from <strong>Quantum School of Technology, Roorkee</strong> which will be completed in 2021.
 						</p>
@@ -116,7 +116,7 @@
 						<div id="contact-me" class="contact-me">
 							<h3 style="text-align: center;">Get In Touch</h3>
 
-						<form id="contact-form" method="post" action="process.php">
+						<form id="contact-form" method="post" action="mailto:indradevkr8@gmail.com" enctype="text/plain">
 							<a name="contact"></a>
 
 							<label>Name</label>
@@ -126,7 +126,7 @@
 							<input class="input-field" type="text" name="subject">
 
 							<label>Email</label>
-							<input class="input-field" type="text" name="email">
+							<input class="input-field" type="email" name="email">
 
 							<label>Message</label>
 							<textarea class="input-field" name="message"></textarea>
