--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 						</div>
 
 						<div class="left-column">
+							<picture>
 							<img id="profile-pic" src="images/indradev.png" alt="Indradev Kumar Mahato"><br>
+							</picture>
 							<br>
 							<h5 style="text-align: center; margin:-20px;">Personalize theme</h5>
 
