--- a/index.html
+++ b/index.html
@@ -112,6 +112,21 @@
 								<li>JAVASCRIPT</li>
 								<li>Django</li>
 								<li>Bootstrap</li>
+								<li>Git</li>
+							</ul>
+						</div>
+						<div id="projects">
+							<h4>Projects Handled </h4>
+							<ul>
+								<li> <a href="https://imtechseeker.herokuapp.com/">Django Blog Application</a> </li> <br>
+
+								<li> <a href="https://github.com/IndradevKr/ecommerceProject">Ecommerce website using Django</a> </li> <br>
+
+								<li> <a href="https://github.com/IndradevKr/youtube-downloader">YouTube Downloader using Python </a></li> <br>
+
+								<li><a href=" https://imtechbaba.blogspot.com/">Blog Website</a></li> <br>
+
+								<li><a href="http://kksunshine.edu.np">Kartik Kumar Sunshine Eng. Boa. School's Website</a></li>
 							</ul>
 						</div>
 					</div>
