--- a/index.html
+++ b/index.html
@@ -118,15 +118,15 @@
 						<div id="projects">
 							<h4>Projects Handled </h4>
 							<ul>
-								<li> <a href="https://imtechseeker.herokuapp.com/">Django Blog Application</a> </li> <br>
+								<li> <a href="https://imtechseeker.herokuapp.com/" target="_blank">Django Blog Application</a> </li> <br>
 
-								<li> <a href="https://github.com/IndradevKr/ecommerceProject">Ecommerce website using Django</a> </li> <br>
+								<li> <a href="https://github.com/IndradevKr/ecommerceProject" target="_blank">Ecommerce website using Django</a> </li> <br>
 
-								<li> <a href="https://github.com/IndradevKr/youtube-downloader">YouTube Downloader using Python </a></li> <br>
+								<li> <a href="https://github.com/IndradevKr/youtube-downloader" target="_blank">YouTube Downloader using Python </a></li> <br>
 
-								<li><a href=" https://imtechbaba.blogspot.com/">Blog Website</a></li> <br>
+								<li><a href=" https://imtechbaba.blogspot.com/" target="_blank">Blog Website</a></li> <br>
 
-								<li><a href="http://kksunshine.edu.np">Kartik Kumar Sunshine Eng. Boa. School's Website</a></li>
+								<li><a href="http://kksunshine.edu.np" target="_blank">Kartik Kumar Sunshine Eng. Boa. School's Website</a></li>
 							</ul>
 						</div>
 					</div>
