--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 									<div id="corner-tr" class="corner"></div>
 									<h3>What I do</h3>
 									<p>I am a full stack web developer.<br>
-										I design eye catching and mobile responsive websites.
+									I love to create beautiful, responsive and efficient websites.
 									</p>
 									<div id="corner-bl" class="corner"></div>
 									<div id="corner-br" class="corner"></div>
