--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						I am currently pursuing my <strong>Bachelor's degree in Computer Science</strong> stream from <strong>Quantum School of Technology, Roorkee</strong> which will be completed in 2021.
 						</p>
 						<p>
-							I am very enthusiastic about looking for an opportunity to use my technical skills to contribute to organisational growth and enhance my skills.
+							I am very enthusiastic about looking for an opportunity to use my technical skills to contribute to organizational growth and enhance my skills.
 						</p>
 						<p>
 							Interested in working together,<br>
