--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						</p>
 						<p>
 							Interested in working together,<br>
-							<a href="https://wa.me/+917078706398/?text=Hello there, How may I help you?" target="_blank">Reach out!</a>
+							<a href="https://wa.me/+917078706398/?text=Hi, I'm " target="_blank">Reach out!</a>
 						</p>
 						<hr>
 						<h4>My Skills</h4>
