--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		 <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
+    		<meta content="utf-8" http-equiv="encoding" />
+
+    		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    		<!-- SEO  -->
+    		<meta property="og:title" content="Indradev Kumar Mahato" />
+    		<meta
+      		property="og:description"
+      		content="I am a full stack web developer. I love to create beautiful, responsive and efficient websites."
+    		<meta property="og:image" content="images/indradev.png" />
+    		<meta name="description" content="Hi, I'm Indradev Kumar Mahato. Interested to know about me! Please, visit my portfolio." />
+
+    		<meta name="robots" content="noindex" />
+    		<link rel="cannonical" href="https://indradevkr.github.io/portfolio/" />
+
 		<title>Indradev Kr Mahato</title>
 
 		<!-- fav-icon -->
