--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
 		
 		<link rel="stylesheet" type="text/css" href="default.css">
 		<link id="theme-style" rel="stylesheet" type="text/css" href=" ">
+		<!-- Google Analytics -->
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-XXXXX-Y', 'auto');
+ga('send', 'pageview');
+</script>
+<!-- End Google Analytics -->
+
+		<meta name="google-site-verification" content="SyGJLqNg1R8--DDrFL1_u6mLLAAEk-QOT7Vpw4qbemQ" />
 
 	</head>
 	<body>
